2013-02-14 Simon Flöry <simon.floery@rechenraum.com>
	* g_real.h - Introducing USE_LIBQUADMATH only when we compile with gcc 
		(fixes sf.net #92).
	* display.c - In display_result_feed, allow pasting of e/E in hex mode

##############################################
# 2013-02-11 galculator 2.1 released         #
##############################################

2013-02-11 Simon Flöry <simon.floery@rechenraum.com>
	* display_change_option - In case of switching from dec to hex/bin/oct, we 
		apply floor function to display values (otherwise, 8.5 -> HEX -> *2 
		gives 17).
	* prefs.ui - Correct wrong name of prefs_hex_signed

2013-01-26 Simon Flöry <simon.floery@rechenraum.com>
	* fallback to default separator if a separator equals the decimal point
		(thanks to Jan Korbel and Dmitry Smirnov for tracking this down)
	* Convert quad-precision floating point numbers properly to strings 

2013-01-06 Simon Flöry <simon.floery@rechenraum.com>
	* configure.in: replaced AM_CONFIG_HEADER by AC_CONFIG_HEADER (thanks to
		John Williams)

2013-01-05 Simon Flöry <simon.floery@rechenraum.com>
	* applied patch by John Williams to support libquadmath (quad-precision
		floating point and up to 112-bit integer arithmetic)
		
2013-01-02 Simon Flöry <simon.floery@rechenraum.com>
	* fixed left shift / right shift in formula entry mode (thanks to Thure 
		Dührsen for reporting, closes sf.net #81)
	* changed default background color
	* left / right shift returns integers only now by truncating (closes sf.net 
		#82)
		
2012-12-26 Simon Flöry <simon.floery@rechenraum.com>
	* add Turkish translation (thanks to Oğuz Yarımtepe and all others for
		contributing, fixes sf.net #86)

##############################################
# 2012-10-15 galculator 2.0.1 released       #
##############################################

2012-12-15 Simon Flöry <simon.floery@rechenraum.com>
	* added missing GUI element in preferences dialog (migrated GtkOptionMenu
		to GtkComboBox in Numbers tab)